--- a/package.json
+++ b/package.json
@@ -55,5 +55,8 @@
     "validator": "^13.11.0",
     "xss-clean": "^0.1.4"
   },
-  "keywords": []
+  "keywords": [],
+  "engines": {
+    "node": ">=10.0.0"
+  }
 }
